Convert to JDK 17, Java ServiceLoader